--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,10 +1,10 @@
 .footer-container {
+  background-color: tomato;
+  bottom: 0;
   display: flex;
   justify-content: space-around;
-  bottom: 0;
+  padding: 4px;
   position: fixed;
   width: 100%;
-  background-color: red;
-  padding: 4px;
 }
 
