--- a/src/styles/Drinks.css
+++ b/src/styles/Drinks.css
@@ -8,13 +8,15 @@
 .buttons {
   background-color: white;
   border-radius: 5px;
-  color: #222;
+  color: rgb(63, 63, 63);
   height: 25px;
   text-decoration: none;
   transition: 0.4s;
 }
 
 .buttons:hover {
-  background-color: #fcc436;
-  color: white;
+  color: rgb(255, 126, 71);
+  border-style: solid;
+  border-width: 0 0 2px;
+  font-weight: 800;
 }
