--- a/src/styles/meals.css
+++ b/src/styles/meals.css
@@ -1,7 +1,7 @@
 .mealsCard {
   background: white;
   border-radius: 10px;
-  box-shadow: 2px 2px 4px #e2e2e2;
+  box-shadow: 2px 2px 10px #b7b7b7;
   color: rgb(41, 41, 41);
   display: flexbox;
   height: fit-content;
@@ -16,11 +16,16 @@
 }
 
 .recipeButton {
-  background-color: white;
+  background-color: #efefef;
   border: 0;
 }
 
+.recipeTitle {
+  font-size: 13px;
+}
+
 .mealsRecipesContainer {
+  background-color: #efefef;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -32,18 +37,32 @@
   display: flex;
   gap: 4px;
   justify-content: center;
+  overflow-x: auto;
+  scroll-behavior: inherit;
 }
 
 .buttons {
-  background-color: white;
-  border-radius: 5px;
-  color: #222;
+  border: 0;
+  border-radius: 0;
+  color: rgb(63, 63, 63);
   height: 25px;
-  text-decoration: none;
   transition: 0.4s;
+  font-weight: 500;
+  font-size: 13;
 }
 
-.buttons:hover {
-  background-color: #fcc436;
-  color: white;
+.button {
+  background-color: rgb(255, 126, 71);
+  border: 0;
+  border-radius: 10px;
+  padding: 5px;
+  width: 60vw;
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+}
+
+.buttonContainer {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
 }
